Add Option for Detached Signatures Add Option to input Detached Signatures for Validating Add Option to Input signed strings via console